syntax = "proto3";

package api;
option go_package = ".;api";


service KobeApi {
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse){}
  rpc ListProject(ListProjectRequest) returns(ListProjectResponse){}
  rpc GetInventory(GetInventoryRequest) returns(GetInventoryResponse){}
  rpc RunPlaybook(RunPlaybookRequest) returns(RunPlaybookResult){}
  rpc RunAdhoc(RunAdhocRequest) returns(RunAdhocResult){}
  rpc WatchResult(WatchRequest) returns(stream WatchStream){}
  rpc GetResult(GetResultRequest) returns(GetResultResponse){}
  rpc ListResult(ListResultRequest) returns(ListResultResponse){}
}

message Project{
  string name = 1 ;
  repeated string playbooks = 2;
}

message Host {
  string ip = 1;
  string name = 2;
  int32 port = 3;
  string user = 4;
  string password = 5;
  string privateKey = 6;
  ProxyConfig proxyConfig = 7;
  map<string, string> vars = 8;
}

message ProxyConfig {
  bool enable = 1;
  string user = 2;
  string password = 3;
  string ip = 4;
  int32 port = 5;
}


message Group {
  string name = 1;
  repeated string hosts = 2;
  repeated string children = 3;
  map<string, string>vars = 4;
}

message Inventory{
  repeated Host hosts = 1;
  repeated Group groups = 2;
  map<string, string> vars = 3;
}

message CreateProjectRequest {
  string name = 1;
  string source = 2;
  bytes inventory = 3;
}

message CreateProjectResponse {
  Project item = 1;
}

message ListProjectRequest {}

message ListProjectResponse {
  repeated Project items = 1;
}

message RunPlaybookRequest {
  string project = 1;
  string playbook = 2;
  Inventory inventory = 3;
  string tag = 4;
}

message RunPlaybookResult {
  Result result = 1;
}

message RunAdhocRequest {
  Inventory inventory = 1;
  string pattern = 2;
  string module = 3;
  string param = 4;
}

message RunAdhocResult{
  Result result = 1;
}

message Result {
  string id = 1;
  string startTime = 2;
  string endTime = 3;
  string message = 4;
  bool success = 5;
  bool finished = 6;
  string content = 7;
  string project = 8;
}

message WatchStream {
  bytes stream = 1;
}

message WatchRequest{
  string taskId = 1;
}

message GetInventoryRequest {
  string id = 1;
}

message GetInventoryResponse {
  Inventory item = 1;
}

message GetResultRequest{
  string taskId = 1;
}

message GetResultResponse{
  Result item = 1;
}

message ListResultRequest{
}

message ListResultResponse{
  repeated Result items = 1;
}


